feat: add reviews to movie show page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -14,4 +14,4 @@
 
 <br><br>
 
-<%= button_to "Return to Discover", user_discover_path(@user.id), method: :get %>
+<%= render partial: "shared/discover_nav" %>
