--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,8 @@
 <h1><%= @user.name %>'s Dashboard</h1><br><br>
 
 
+<%= render partial: "shared/discover_nav" %>
 
-<%= button_to "Discover Movies"  %>
 
 <h2>My Viewing Parties</h2>
 
