--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "shared/nav" %>
 <h1>Viewing Party Home</h1>
-<%= button_to("Create an account", '/register') %>
+<%= button_to("Create an account", register_path, method: :get ) %>
 <% @users.each do |user| %>
 <br>
     <section id="user_<%= user.id %>">
