--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,13 @@
+<% if @facade.search == "keywords" %>
+  <h3>Movie results for: <%= @facade.keywords %></h3>
+<% end %>
+
 <%= button_to "Discover Page", user_discover_path(@user.id), method: :get %>
 
-<%= render partial: "movie_results", locals: { movies: @facade.top_20_rated, user: @user, search: @facade.search } %>
-<%= render partial: "movie_results", locals: { movies: @facade.keyword_results, user: @user, search: @facade.search } %>
+<ul>
+  <% @facade.movie_results.each do |movie| %>
+      <li>
+        <%= link_to movie.title, user_movie_path(@user.id, movie.id) %>, <%= movie.rating %>
+      </li>
+  <% end %>
+</ul>
