--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,1 +1,20 @@
 <%= @movie[:title] %>
+
+<%= form_with url: user_movie_viewing_parties_path(@user, @movie[:id]), method: :post, local: true do |form| %>
+  <%= form.label :duration %>
+  <%= form.text_field :duration %>
+
+  <%= form.label :date %>
+  <%= form.date_field :date %>
+
+  <%= form.label :start_time %>
+  <%= form.time_field :start_time %>
+
+  <% @users.each do |u| %>
+  <%= form.label u.name %>
+    <%= form.check_box(u.name) %>
+  <% end %>
+  
+  <%= form.submit "Create Party" %>
+
+<% end %>
