Change start_date to party_date to match table

--- a/app/views/viewing_party/new.html.erb
+++ b/app/views/viewing_party/new.html.erb
@@ -9,7 +9,7 @@
   <%= form.number_field :duration, value: @movie.runtime %>
 
   <%= form.label "Day" %>
-  <%= form.date_field :start_date, value: Date.today %>
+  <%= form.date_field :party_date, value: Date.today %>
 
   <%= form.label "Start time" %>
   <%= form.time_field :start_time, value: Time.now %>
