--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Discover Page", "/users/#{@user.id}/discover"%>
+<%= button_to "Discover Page", "/users/#{@user.id}/discover", method: :get %>
 </br>
 <% @movies.each do |movie| %>
   <li><%= link_to movie.title, "/users/#{@user.id}/movies/#{movie.id}" %>
