Fix: adds link to movie show page

--- a/app/views/users/movies.html.erb
+++ b/app/views/users/movies.html.erb
@@ -14,7 +14,7 @@
     <tbody>
       <% @movies.each do |movie| %>
         <tr class="tr">
-          <td class="td1"><%= movie.title %></td>
+          <td class="td1"><%= link_to movie.title, user_movie_show_path(user_id: @user.id, movie_id: movie.id) %></td>
           <td class="td1"><%= movie.rating %></td>
         </tr>
       <% end %>
