--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -19,10 +19,11 @@ Movie Title: <%= @movie.title %>
   <h3>Invite Other Users</h3>
   <% @users.each do |user| %>
     <% next if user == @user %>  
-    <%= form.label user.name %>
-    <%= form.check_box :user_ids, { multiple: true }, user.id %>
+    <%= check_box_tag "participants[]", user.id, false, id: "#{user.id}" %>
+    <%= label_tag "#{user.id}" do %>
+      <%= user.name %> (<%= user.email %>)
+    <% end %>
   <% end %>
   <br>
-  <%= form.hidden_field :movie_id, value: @movie.id %>
   <%= form.submit "Create Party" %>
 <% end %>
