feat: pass along movie runtime as a param

--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -25,5 +25,6 @@
   <%= f.collection_check_boxes :invitees, @users, :id, :name_email  %>
 
   <br><br>
+  <%= f.hidden_field :movie_runtime, value: @movie.runtime %>
   <%= f.submit "Create Party" %>
 <% end %>
