delete extra home route, add movie details to movies new
Co-authored-by: Dani <danirae.powell@gmail.com>

--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,15 +1,25 @@
 <li> Title: <%= @movie.title %></li>
+<br>
 <li>Rotten Toe Mate Toes: <%= @movie.vote_average %></li>
-<li>Runtime: <%= @movie.runtime %></li>
+<br>
+<li>Runtime: <%= @movie.runtime %> minutes</li>
+<br>
 <li>Genres: <%= @movie.genres %></li>
+<br>
+<br>
 <li>Summary: <%= @movie.summary %></li>
-    <% binding.pry %>
-<li>Cast:
-  <ul>
-    <% @movie.each do |cast_member| %>
-      <li><%= cast_member[:name] %> </li>
-    <% end %>
-  </ul>
-</li>
-<li>Review Count: <%= @movie.total_review_count %></li>
-<li>Reviewed by: <%= @movie.reviewer %></li>
+<br>
+<br>
+Cast for <%=@movie.title %>: <% @movie1.cast.first(10).each do |cast_member| %>  
+                <li><%= cast_member[:name] %></li> 
+              <% end %></li>
+<br>
+<br>
+<li>Review Count: <%= @movie2.total_review_count %></li>
+<br>
+<br>
+Reviewed by: <% @movie2.reviewer.each do |result| %>
+                <br><li><%= result[:author] %></li> 
+                <li><%= result[:content] %></li> 
+                <br>
+              <% end %>
