--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
-<%= render "shared/welcome_link" %><br>
-
+<%= render "shared/welcome_link" %>
+<br>
 <head>
-  <%= "#{@user.name}'s Dashboard" %>
+  <h1><%= "#{@user.name}'s Dashboard" %></h1>
 </head>
-
+<br>
 <body>
   <%= button_to "Discover Movies", user_discover_index_path(@user), class: "button", method: :get %>
 </body>
+<br>
+<h3><%= "#{@user.name}'s Viewing Parties" %></h3>
