feat: format items in new.html.erb and show.html.erb

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -7,8 +7,8 @@
   <h3><%= @movie.title %></h3>
   <ul>
     <p><strong>Vote: </strong><%= @movie.vote_average %></p>
-    <p><strong>Runtime: </strong><%= @movie.runtime %></p>
-    <p><strong>Genre: </strong><%= @movie.genre %></p>
+    <p><strong>Runtime: </strong><%= @movie.format_runtime(@movie.runtime) %></p>
+    <p><strong>Genre: </strong><%= @movie.format_genre %></p>
     <p><strong>Summary: </strong><%= @movie.overview %></p>
     <p><strong>Cast and Characters: </strong><br>
 
