--- a/app/views/viewing_party/new.html.erb
+++ b/app/views/viewing_party/new.html.erb
@@ -22,8 +22,8 @@
 
       <h3>Invite Other Users</h3>
       <% @users.each do |user| %>
-        <%= check_box_tag(:user_id, user.id) %>
-        <%= label_tag(:user_id, user.name) %>
+        <%= form.check_box(user.name) %>
+        <%= form.label(user.name) %>
       <% end %><br><br>
       
       <%= form.submit 'Create Party' %>
