Refactor user story 12

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,4 +14,12 @@
 
 <div id="viewing">
 <h2>Viewing Parties</h2>
+    <ul>
+      <% @viewing_parties.each do |p| %>
+        <li>
+          <p><%= p.movie_title %></p>
+      
+        </li>
+      <% end %>
+    </ul>
 </div>
