complete user story 12

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,10 +15,9 @@
 <div id="viewing">
 <h2>Viewing Parties</h2>
     <ul>
-      <% @viewing_parties.each do |p| %>
+      <% @user.viewing_parties.each do |p| %>
         <li>
           <p><%= p.movie_title %></p>
-      
         </li>
       <% end %>
     </ul>
