--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -1,8 +1,9 @@
 <h1> Create a Movie Party for: <%= @movie.title %>
 <%= button_to "Discover Page", "/users/#{@user.id}/discover", method: :get %>
 <%= form_with url: user_movie_parties_path, method: :post, local: true do |form| %>
-  <%= hidden_field_tag :movie_title, @movie.title %>
+  <%= hidden_field_tag :title, @movie.title %>
   <%= hidden_field_tag :movie_id, @movie.id %>
+  <%= hidden_field_tag :poster_path, @movie.image %>
   <%= form.label :duration, "Duration:" %>
   <%= form.number_field :duration, value: @movie.runtime %><br>
   <%= form.label :date, "Date:" %>
