--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,40 +4,19 @@
 </div>
 <div id="my_parties">
   <h3>My Parties</h3>
-  <% @user.viewing_parties.each do |party| %>
-    <h3>Viewing Party ID: <%= party.id %></h3>
-    <table border="1">
-      <thead>
-        <tr>
-          <th>Movie Image</th>
-          <th>Movie Title</th>
-          <th>Date</th>
-          <th>Time</th>
-          <th>Host</th>
-          <th>Guests</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <%= image_tag party.movie_image_url(@movie_images), width: 100 %>
-          </td>
-          <td>
-            <%= link_to @movies[party.movie_id], user_movie_show_path(user_id: @user.id, movie_id: party.movie_id) %>
-          </td>
-          <td><%= party.party_date %></td>
-          <td><%= party.start_time.strftime("%I:%M %p") %></td>
-          <td>
-            <% host = party.party_guests.find { |pg| pg.host } %>
-            <%= host ? host.user.name : "N/A" %>
-          </td>
-          <td>
-            <% guest_names = party.party_guests.map { |pg| pg.user.name } %>
-            <% guest_list = guest_names.map { |name| name == @user.name ? "<strong>#{name}</strong>" : name }.join(", ").html_safe %>
-            <%= guest_list %>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  <% end %>
-</div>
+  <% hosting_parties, invited_parties = @user.viewing_parties.partition { |party| party.party_guests.find { |pg| pg.host && pg.user_id == @user.id } } %>
+  <% if invited_parties.any? %>
+    <div id="invited-parties">
+      <h4>Parties I'm Invited To</h4>
+      <% invited_parties.each do |party| %>
+        <%= render 'party_table', party: party, id: 'invited-parties-table' %>
+      <% end %>
+    <% end %>
+    <% if hosting_parties.any? %>
+      <div id="hosted-parties">
+        <h4>Parties I'm Hosting</h4>
+        <% hosting_parties.each do |party| %>
+          <%= render 'party_table', party: party, class: 'invited-parties-table' %>
+        <% end %>
+      <% end %>
+    </div>
