--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,13 +6,20 @@
 <section id="viewing_parties">
   <h3>Viewing Parties</h3>
   <p>
-    <h4>Hosted Parties</h4>
     <% @user.parties.each do |party| %>
-      <div style="border: 1, margin:10px">
+      <div id="<%= party.id %>_info" style="border: 1, margin:10px">
         <img class="movie_thumbnail" src="<%=party.thumbnail%>"><br /><br />
-        <%= party.movie_title %><br /><br />
+        <%= link_to party.movie_title, user_movie_path(@user.id, party.movie_id) %><br /><br />
+        Hosted By: <%= party.host_name  %><br/>
         Date: <%= party.date %><br/>
         Time: <%= party.start_time %><br/><br/>
+        Attendees: <% party.invited_users.each do |name| %>
+          <% if name == @user.name %>
+            <b><%= name %></b>,
+          <% else %>
+            <%= name %>,
+          <% end %>
+        <% end %><br/><br/>
         <% if @user.id == party.host_id %>
           Hosting
         <% else %>
