add routing to create user button
Co-authored-by: Dani <danirae.powell@gmail.com>

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,6 +1,6 @@
 <h1> Viewing Party</h1>
 
-<%= button_to("Create New User") %>
+<%= button_to "Create New User", "/users", method: :post %>
 <br>
 <br>
 
