--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -31,6 +31,6 @@
     <br>
 <% end %>
 
-
-
+<%= button_to "Create Viewing Party", new_user_movie_viewing_party_path(@user.id, @facade.movie.id), method: :get %>
+<br>
 <%= button_to "Return to Discover", user_discover_path(@user.id), method: :get %>
