Change instance variables to reference party methods

--- a/app/views/users/_party_table.html.erb
+++ b/app/views/users/_party_table.html.erb
@@ -13,10 +13,10 @@
   <tbody>
     <tr>
       <td>
-        <%= image_tag party.movie_image_url(@movie_images), width: 100 %>
+        <%= image_tag party.movie_image, width: 100 %>
       </td>
       <td>
-        <%= link_to @movies[party.movie_id], user_movie_show_path(user_id: @user.id, movie_id: party.movie_id) %>
+        <%= link_to party.movie_title, user_movie_show_path(user_id: @user.id, movie_id: party.movie_id) %>
       </td>
       <td><%= party.party_date %></td>
       <td><%= party.start_time.strftime("%I:%M %p") %></td>
