--- a/app/views/users/discover.html.erb
+++ b/app/views/users/discover.html.erb
@@ -7,7 +7,7 @@
       <h1>Viewing Party</h1>
         <h3> Discover Movies </h3>
 
-        <%= button_to "Top Rated Movies", user_movies_path(@user) %><br><br>
+        <%= button_to "Top Rated Movies", user_movies_path(@user), method: :get %><br><br>
 
         <%= form_with url: user_movies_path(@user), method: :get, local: true do |form| %>
           
