Update: Change routes for new user registration to take place on '/register'

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div id="user-creation">
-  <%= button_to "Create A New User", new_register_path, method: :get %>
+  <%= button_to "Create A New User", register_path, method: :get %>
 </div>
 
 <div id="all-users">
