--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,6 +10,12 @@
 
     <%= f.label :email %>
     <%= f.email_field :email %>
+    
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+    
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
 
     <%= f.submit %>
   <% end %>
