Feature: Update welcome#index view with button and Add login page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
-<div id="user-creation">
-  <%= button_to "Create A New User", register_path, method: :get %>
+<div id="user-buttons">
+  <%= button_to "Sign In", login_path, method: :get %>
+  <%= button_to "Create an Account", register_path, method: :get %>
 </div>
 
 <div id="all-users">
