--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,5 +7,11 @@
   <%= f.label :email %>
   <%= f.text_field :email %>
 
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+
   <%= f.submit "Register" %>
 <% end %>
