complete us 1 and 2. basic authentication added to controller with full sad path testing

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h3>Register a New User</h3>
 
-<%= form_with(url: register_path, model: @user, method: :post) do |f| %>
+<%= form_with(url: register_path, model: @user, method: :post, data: { turbo: false }) do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
