--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,12 +1,12 @@
+<div class="login-register-form">
 <h2>Log In</h2>
-<div id="sign-in-form">
   <%= form_with url: login_path, method: :post do |f| %>
     <%= f.label :email %>
     <%= f.email_field :email %>
-    
+    <br/>
     <%= f.label :password %>
     <%= f.password_field :password %>
-    
+    <br/>
     <%= f.submit "Sign In" %>
   <% end %>
 </div>
