feat: route to controller action and template creation

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 
 <div id="new_user">
   <%= button_to "Create New User", "/register", method: :get %>
+  <%= button_to "Log In", login_path, method: :get %>
 </div>
 
 <ul id="existing_users">
