--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
 <div class="user-dash-top">
+  <% if flash[:success_login] %>
+    <div><%= flash[:success_login] %></div>
+  <% end %>
+
   <h2><%= @user.name %>'s Dashboard</h2>
   <button>
     <%= link_to 'Discover Movies', user_discover_index_path(@user) %>
