feat: beginning session implementation from class

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,11 @@
-
-<div id="new_user">
-  <%= button_to "Create New User", "/register", method: :get %>
-  <%= button_to "Log In", login_path, method: :get %>
-</div>
+<% if current_user %>
+  <%= link_to "Log Out" %>
+<% else %>
+  <div id="new_user">
+    <%= button_to "Create New User", "/register", method: :get %>
+    <%= button_to "Log In", login_path, method: :get %>
+  </div>
+  <% end %>
 
 <ul id="existing_users">
   <h3>Existing Users</h3>
